[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/player_walk/4.png" type="Texture" id=1]
[ext_resource path="res://assets/player/sprite5.png" type="Texture" id=2]
[ext_resource path="res://assets/player/sprite4.png" type="Texture" id=3]
[ext_resource path="res://assets/player/sprite1.png" type="Texture" id=4]
[ext_resource path="res://assets/player/sprite6.png" type="Texture" id=5]
[ext_resource path="res://assets/player/sprite2.png" type="Texture" id=6]
[ext_resource path="res://assets/player/sprite0.png" type="Texture" id=7]
[ext_resource path="res://assets/player/sprite3.png" type="Texture" id=8]
[ext_resource path="res://src/Actor/Player1.gd" type="Script" id=9]
[ext_resource path="res://assets/player_walk/3.png" type="Texture" id=10]
[ext_resource path="res://assets/player_walk/0.png" type="Texture" id=11]
[ext_resource path="res://assets/player_walk/2.png" type="Texture" id=12]
[ext_resource path="res://assets/player_walk/1.png" type="Texture" id=13]
[ext_resource path="res://assets/player_walk/5.png" type="Texture" id=14]
[ext_resource path="res://assets/player_lockout/Nocaute.png" type="Texture" id=15]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 196, 166 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 196, 0, 196, 166 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 196, 166 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": false,
"name": "Dodge",
"speed": 50.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "Dying",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 3 ) ],
"loop": false,
"name": "Low Punch",
"speed": 6.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": false,
"name": "Taking Damage",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 14 ) ],
"loop": true,
"name": "Walk",
"speed": 8.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38.5, 96 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 20.5 )

[node name="Player1" type="KinematicBody2D"]
script = ExtResource( 9 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.998562, 1 )
frames = SubResource( 1 )
animation = "Idle"
frame = 1
playing = true

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( -17, 0 )
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2( -7.10543e-15, 0 )

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 50, -60.5 )
shape = SubResource( 3 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="animation_finished" from="PlayerSprite" to="." method="_on_PlayerSprite_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
